kubernetes/middleware-compress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: url-shortener-compress
  namespace: url-shortener
spec:
  compress: {}
