kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-db
  namespace: url-shortener
spec:
  selector:
    app: url-shortener-db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
